
- #9633: ocamltest: fix a bug when certain variables set in test scripts would
  be ignored (eg `ocamlrunparam`).
  (Nicolás Ojeda Bär, review by Sébastien Hinderer)

- #9681, #9690, #9693: small runtime changes
  for the new closure representation (#9619)
  (Xavier Leroy, Sadiq Jaffer, Gabriel Scherer,
   review by Xavier Leroy and Jacques-Henri Jourdan)

- #9759, #9767: Spurious GADT ambiguity without -principal
  (Jacques Garrigue, report by Thomas Refis,
   review by Thomas Refis and Gabriel Scherer)

- #9799, #9803: pat_env points to the correct environment
  (Thomas Refis, report by Alex Fedoseev, review by Gabriel Scherer)

- #9825, #9830: the C global variable caml_fl_merge and the C function
  caml_spacetime_my_profinfo (bytecode version) were declared and
  defined with different types.  This is undefined behavior and
  cancause link-time errors with link-time optimization (LTO).
  (Xavier Leroy, report by Richard Jones, review by Nicolás Ojeda Bär)

- #9753: fix build for Android
  (Github user @EduardoRFS, review by Xavier Leroy)

- #9848, #9855: Fix double free of bytecode in toplevel
  (Stephen Dolan, report by Sampsa Kiiskinen, review by Gabriel Scherer)

- #9858, #9861: Compiler fails with Ctype.Nondep_cannot_erase exception
  (Thomas Refis, report by @pveber, review by Florian Angeletti)

- #9860: wrong range constraint for subtract immediate on zSystems / s390x
  (Xavier Leroy, review by Stephen Dolan)

- #9868, #9872, #9892: bugs in {in,out}_channel_length and seek_in
  for files opened in text mode under Windows
  (Xavier Leroy, report by Alain Frisch, review by Nicolás Ojeda Bär
  and Alain Frisch)

- #9925: Correct passing -fdebug-prefix-map to flexlink on Cygwin by prefixing
  it with -link.
  (David Allsopp, review by Xavier Leroy)

- #9927: Restore Cygwin64 support.
  (David Allsopp, review by Xavier Leroy)

- #9940: Fix unboxing of allocated constants from other compilation units